add (handler and router) country
